@@ -3,6 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+saving user catalog doesn't update
 last char of line - C+next
  null view -- browser's buttons broken
 C+j broken wit read only
